fix: fix text align

--- a/src/styles/components/_examples.scss
+++ b/src/styles/components/_examples.scss
@@ -44,7 +44,6 @@
     }
 
     &__h2 {
-        text-align: center;
         margin-bottom: var(--margin);
     }
 
@@ -58,7 +57,7 @@
 
         @include mixins.respond-to(mobile) {
             width: 100%;
-            text-align: center;
+
             margin-left: 0;
         }
     }
